# card-sensei

./: Cargo.toml  LICENSE  README.md  index.html
css/: custom.css
js/: anki-connect.js  dictionary.js  gui.js  pitch_accent_drawer.js
public/assets/css/: bootstrap.css  custom.css
public/assets/js/: anki-connect.js  dictionary.js  gui.js  pitch-accent.js  settings.js  util.js
public/templates/: cards.html  index.html
src/: main.rs  template.rs
src/api/types/: mod.rs
src/database/: constants.rs  mod.rs  types.rs
